[package]
name = "xperience-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "time"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
